--- a/test-output/index.html
+++ b/test-output/index.html
@@ -234,20 +234,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test1')
 data.setCell(0, 2, 'testcases.RemoteFlowTest')
-data.setCell(0, 3, 18205);
+data.setCell(0, 3, 25732);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'test1')
 data.setCell(1, 2, 'testcases.RemoteFlowTest')
-data.setCell(1, 3, 17958);
+data.setCell(1, 3, 25711);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'test1')
 data.setCell(2, 2, 'testcases.RemoteFlowTest')
-data.setCell(2, 3, 10693);
+data.setCell(2, 3, 12822);
 window.suiteTableData['Remote_Suite']= { tableData: data, tableDiv: 'times-div-Remote_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 46 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Remote_Suite">
               </div> <!-- times-div-Remote_Suite -->
             </div> <!-- times-div -->
@@ -275,40 +275,40 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">testcases.RemoteFlowTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
+                <span class="method-name">setup(chrome)</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">setup(chrome)</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
                 <span class="method-name">setup(firefox)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">setup(chrome)</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">setup(chrome)</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">11267 ms</span>
+                <span class="method-start">14483 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">11290 ms</span>
+                <span class="method-start">14636 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">15247 ms</span>
+                <span class="method-start">18566 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">26244 ms</span>
+                <span class="method-start">36322 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">29267 ms</span>
+                <span class="method-start">45027 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">29536 ms</span>
+                <span class="method-start">45131 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
