--- a/reports/Sun_Dec_02_07_58_05_IST_2018extent.html
+++ b/reports/Sun_Dec_02_07_58_05_IST_2018extent.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2018-12-01 15:09:29</span>
+					<span class='suite-started-time'>2018-12-02 07:58:57</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 29s+774ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 51s+540ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 29s+774ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 51s+540ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2018-12-01 15:08:59</span> 
+							<span class='panel-lead suite-started-time'>2018-12-02 07:58:05</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2018-12-01 15:09:29</span> 
+							<span class='panel-lead suite-ended-time'>2018-12-02 07:58:57</span> 
 						</div> 
 					</div>
 				</div>
@@ -238,7 +238,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='15a34bd9-67ab-47f3-bfc2-86e7006ef002'>
+										<li class='collection-item test displayed active pass ' extentid='cc977005-a10f-4e77-ad9b-cdd3cc614856'>
 											<div class='test-head'>
 												<span class='test-name'>test1 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -246,9 +246,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-12-01 15:09:10</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-12-02 07:58:27</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-12-02 07:58:57</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 29s+996ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -265,8 +265,13 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>15:09:28</td>
+																	<td class='timestamp'>07:58:52</td>
 																	<td class='step-details'>test1 PASSED</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>07:58:57</td>
+																	<td class='step-details'><a href='C:\Users\benny\git\remoteAutoFramework\src\test\resources\screenshots\chrome\Sun_Dec_02_07_58_52_IST_2018test1Sun_Dec_02_07_58_52_IST_2018.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\benny\git\remoteAutoFramework\src\test\resources\screenshots\chrome\Sun_Dec_02_07_58_52_IST_2018test1Sun_Dec_02_07_58_52_IST_2018.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
@@ -275,7 +280,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='7229f350-8801-4dde-8f42-6109f6a6d9ab'>
+										<li class='collection-item test displayed active pass ' extentid='da3cb29e-51e0-4617-a82b-4440baa5f2ba'>
 											<div class='test-head'>
 												<span class='test-name'>test1 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -283,9 +288,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-12-01 15:09:10</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'></span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'></span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-12-02 07:58:27</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-12-02 07:58:56</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 29s+224ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -302,8 +307,13 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>15:09:29</td>
+																	<td class='timestamp'>07:58:52</td>
 																	<td class='step-details'>test1 PASSED</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>07:58:56</td>
+																	<td class='step-details'><a href='C:\Users\benny\git\remoteAutoFramework\src\test\resources\screenshots\chrome\Sun_Dec_02_07_58_52_IST_2018test1Sun_Dec_02_07_58_52_IST_2018.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\benny\git\remoteAutoFramework\src\test\resources\screenshots\chrome\Sun_Dec_02_07_58_52_IST_2018test1Sun_Dec_02_07_58_52_IST_2018.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
@@ -312,7 +322,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='48d978c9-f101-410d-ba37-b8b1a95fe065'>
+										<li class='collection-item test displayed active pass ' extentid='053f3d1f-84cf-4049-a778-9b66ae6d87c5'>
 											<div class='test-head'>
 												<span class='test-name'>test1 </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -320,9 +330,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-12-01 15:09:14</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-12-01 15:09:25</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 10s+698ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2018-12-02 07:58:27</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2018-12-02 07:58:47</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 19s+494ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -339,8 +349,13 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>15:09:25</td>
+																	<td class='timestamp'>07:58:40</td>
 																	<td class='step-details'>test1 PASSED</td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>07:58:47</td>
+																	<td class='step-details'><a href='C:\Users\benny\git\remoteAutoFramework\src\test\resources\screenshots\firefox\Sun_Dec_02_07_58_40_IST_2018test1Sun_Dec_02_07_58_40_IST_2018.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\benny\git\remoteAutoFramework\src\test\resources\screenshots\firefox\Sun_Dec_02_07_58_40_IST_2018test1Sun_Dec_02_07_58_40_IST_2018.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
