--- a/test-output/index.html
+++ b/test-output/index.html
@@ -234,20 +234,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'test1')
 data.setCell(0, 2, 'testcases.RemoteFlowTest')
-data.setCell(0, 3, 25732);
+data.setCell(0, 3, 19824);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'test1')
 data.setCell(1, 2, 'testcases.RemoteFlowTest')
-data.setCell(1, 3, 25711);
+data.setCell(1, 3, 18779);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'test1')
 data.setCell(2, 2, 'testcases.RemoteFlowTest')
-data.setCell(2, 3, 12822);
+data.setCell(2, 3, 10034);
 window.suiteTableData['Remote_Suite']= { tableData: data, tableDiv: 'times-div-Remote_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 48 seconds</span>
               <div id="times-div-Remote_Suite">
               </div> <!-- times-div-Remote_Suite -->
             </div> <!-- times-div -->
@@ -288,27 +288,27 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">14483 ms</span>
+                <span class="method-start">11794 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">14636 ms</span>
+                <span class="method-start">11832 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">test1</span>
-                <span class="method-start">18566 ms</span>
+                <span class="method-start">15304 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">36322 ms</span>
+                <span class="method-start">28842 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">45027 ms</span>
+                <span class="method-start">34031 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">45131 ms</span>
+                <span class="method-start">34314 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
