--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,17 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Remote Suite</th></tr>
-<tr><td><a href="#t0">HappyFlowFirefoxTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">31,075</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">testim</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">34,276</td><td></td><td></td></tr>
-<tr><td><a href="#t2">HappyFlowChromeTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">34,505</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">99,856</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">HappyFlowFirefoxTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">38,510</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">HappyFlowChromeTest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">43,582</td><td></td><td></td></tr>
+<tr><td><a href="#t2">testim</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">43,759</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">125,851</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Remote Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">HappyFlowFirefoxTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.RemoteFlowTest</td><td><a href="#m0">test1</a></td><td rowspan="1">1543731301409</td><td rowspan="1">10034</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">testim &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.RemoteFlowTest</td><td><a href="#m1">test1</a></td><td rowspan="1">1543731297899</td><td rowspan="1">18779</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">HappyFlowChromeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.RemoteFlowTest</td><td><a href="#m2">test1</a></td><td rowspan="1">1543731297937</td><td rowspan="1">19824</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Remote Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">HappyFlowFirefoxTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.RemoteFlowTest</td><td><a href="#m0">test1</a></td><td rowspan="1">1543731942696</td><td rowspan="1">12462</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">HappyFlowChromeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.RemoteFlowTest</td><td><a href="#m1">test1</a></td><td rowspan="1">1543731938792</td><td rowspan="1">24024</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">testim &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testcases.RemoteFlowTest</td><td><a href="#m2">test1</a></td><td rowspan="1">1543731939220</td><td rowspan="1">24066</td></tr></tbody>
 </table>
 <h2>HappyFlowFirefoxTest</h2><h3 id="m0">testcases.RemoteFlowTest#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>testim</h2><h3 id="m1">testcases.RemoteFlowTest#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>HappyFlowChromeTest</h2><h3 id="m2">testcases.RemoteFlowTest#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>HappyFlowChromeTest</h2><h3 id="m1">testcases.RemoteFlowTest#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>testim</h2><h3 id="m2">testcases.RemoteFlowTest#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
